--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,7 @@ ruff = "^0.7.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+# maximum line length
+line-length = 120
