Extend ruff config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,11 @@ build-backend = "poetry.core.masonry.api"
 [tool.ruff]
 # maximum line length
 line-length = 120
+
+[tool.ruff.lint]
+extend-select = [
+    "E501",
+    "D",    # pydocstyle
+    "W293", # blank line whitespace
+    "W292", # new line at EoF
+]
